crates/es-fluent-core/tests/snapshots/analysis_tests__enum_analysis_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/analysis_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "MyError",
    variants: [
      FtlVariant(
        name: "MyError",
        ftl_key: FluentKey("my_error"),
        arguments: None,
      ),
      FtlVariant(
        name: "Unit",
        ftl_key: FluentKey("my_error-Unit"),
        arguments: None,
      ),
    ],
  ),
  FtlTypeInfo(
    type_kind: Struct,
    type_name: "MyError",
    variants: [
      FtlVariant(
        name: "MyError",
        ftl_key: FluentKey("my_error"),
        arguments: None,
      ),
      FtlVariant(
        name: "Data",
        ftl_key: FluentKey("my_error-Data"),
        arguments: Some([
          "a",
        ]),
      ),
      FtlVariant(
        name: "Tuple",
        ftl_key: FluentKey("my_error-Tuple"),
        arguments: Some([
          "f1",
        ]),
      ),
    ],
  ),
]
