crates/es-fluent-core/tests/snapshots/analysis_tests__enum_analysis_only_struct_and_tuple_variants_no_this.snap
---
source: crates/es-fluent-core/tests/analysis_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Struct,
    type_name: "E",
    variants: [
      FtlVariant(
        name: "Data",
        ftl_key: FluentKey("e-Data"),
        args: [
          "x",
          "y",
        ],
      ),
      FtlVariant(
        name: "Tup",
        ftl_key: FluentKey("e-Tup"),
        args: [
          "f0",
          "f2",
        ],
      ),
    ],
    file_path: None,
  ),
]
