crates/es-fluent-core/tests/snapshots/analysis_tests__enum_analysis_only_unit_variants_no_this.snap
---
source: crates/es-fluent-core/tests/analysis_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "E",
    variants: [
      FtlVariant(
        name: "A",
        ftl_key: FluentKey("e-A"),
        arguments: None,
      ),
      FtlVariant(
        name: "B",
        ftl_key: FluentKey("e-B"),
        arguments: None,
      ),
    ],
  ),
]
