crates/es-fluent-core/tests/snapshots/analysis_tests__struct_analysis_no_keys_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/analysis_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Struct,
    type_name: "MyStruct",
    variants: [
      FtlVariant(
        name: "MyStruct",
        ftl_key: FluentKey("my_struct"),
        args: [
          "a",
        ],
      ),
    ],
    file_path: None,
  ),
]
