crates/es-fluent-core/tests/snapshots/analysis_tests__struct_analysis_tuple_struct_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/analysis_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Struct,
    type_name: "TupleStruct",
    variants: [
      FtlVariant(
        name: "TupleStruct",
        ftl_key: FluentKey("tuple_struct"),
        args: [
          "f0",
          "f2",
        ],
      ),
    ],
  ),
]
