crates/es-fluent-core/tests/snapshots/analysis_tests__struct_analysis_with_keys_and_this_generates_expected_ftl_type_info.snap
---
source: crates/es-fluent-core/tests/analysis_tests.rs
expression: "&infos"
---
[
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "MyStructErrorFtl",
    variants: [
      FtlVariant(
        name: "MyStructErrorFtl",
        ftl_key: FluentKey("my_struct_error_ftl"),
        args: [],
      ),
      FtlVariant(
        name: "a",
        ftl_key: FluentKey("my_struct_error_ftl-a"),
        args: [],
      ),
    ],
  ),
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "MyStructNoticeFtl",
    variants: [
      FtlVariant(
        name: "MyStructNoticeFtl",
        ftl_key: FluentKey("my_struct_notice_ftl"),
        args: [],
      ),
      FtlVariant(
        name: "a",
        ftl_key: FluentKey("my_struct_notice_ftl-a"),
        args: [],
      ),
    ],
  ),
  FtlTypeInfo(
    type_kind: Enum,
    type_name: "MyStruct",
    variants: [
      FtlVariant(
        name: "MyStruct",
        ftl_key: FluentKey("my_struct"),
        args: [],
      ),
    ],
  ),
]
